# RFC

./: .gitignore  README.md  compression_only.csv  env.yaml  investigate.csv  nohup.out  random_compression_report.csv  rfc_test.csv  rfc_test3.csv  sep_fail.lp  subtree_sep.csv  terminal_genetic.csv  test_compression_train_only.csv  test_compression_train_only_1000.csv  test_genetic.csv  test_greedy.csv  test_relax_compression_train_only.csv
rfc/: investigate.py  model.py  nohup.out  prepare_dataset.py  pyproject.toml  report.py  rfc_test_1684956706.333985.csv  rfc_test_1684958467.9729853.csv  rfc_test_1685023642.6980128.csv  rfc_test_1685024773.442612.csv  rfc_test_1685026576.8384128.csv  rfc_test_1685032267.3308687.csv  rfc_test_1685037063.9945538.csv  rfc_test_1685039212.005628.csv  rfc_test_1685109867.8337624.csv  test.py  test_compress_train.py  test_genetic.py  test_greedy.py  test_load_tree_ensemble.py  test_model.py  test_model_subtree.py  test_random.py  test_relax_compress_train.py  test_subtree_train.py
rfc/rfc/: __init__.py
rfc/rfc/heuristic/: __init__.py  genetic.py  greedy.py
rfc/rfc/model/: __init__.py  compressor.py  random_compressor.py  relax_compressor.py  rfc.py  separator.py
rfc/rfc/module/: __init__.py  compress.py  cplex.py  model.py  separate.py  util.py
rfc/rfc/structs/: __init__.py  ensemble.py  feature.py  node.py  tree.py  utils.py
rfc/rfc/subtree/: __init__.py  compressor.py  rfc.py  separator.py
rfc/rfc/types/: __init__.py
rfc/rfc/utils/: __init__.py  check.py  file.py
rfc/rfc_cpp/struct/: dataframe.cpp  dataframe.hpp  (+15 more)
(+426 files in other folders)
